# code_clips

./: .gitignore  Manager.py  README.md  REAMME.txt  multithreading.py  python_tips.py  regression.py  shell-tips.sh  soundex.py  yield.py  截图.py
Clang/: common.c  daemon-unix.c  deamon.c  fork_test.c  gethostbynane.c  hash.c  macro.c  note.md  pip_shell.c  system.c  type-props.h
Clang/APUE/: a.out  asyn_io.c  orphaned-process.c  print_signal.c  process.c  signal_CLD.c  signal_alarm.c  signal_test.c  signal_usr12.c  sleep2.c
Clang/APUE/apue/: a.out  add  add2  buffer  full_buffer_read.c  io_buffer.c  myuclc  pOpen.c  pipe.c  test
Clang/APUE/coding/: .name_un_socket.c.swp  coprocess.c  fd_pip.c  fd_socke.c  fd_socket.c  fd_socket.h  fd_socket_server.c  full_buffer_write.c  name_un_socket.h  nice.c  poll.h  pollmsg.c  semaphore.c  sendmsg.c  shm.c  socket.h  socket_client.c  socket_connectless.c  socket_connectless_server.c  socket_server.c  sys.c  time.c
Clang/APUE/coding/fd_server/: fd.h  name_un_socket.c  server_main.c
Clang/aio/ae/: Makefile  README.md  client.c  echoServer.c  net.h
Clang/aio/aio/: Makefile  ReadMe.txt  aio_comdef.h  aio_fun.c  aio_fun.h  aio_fundef.h  aio_rwfun.c  aio_rwfun.h  aio_rwfundef.h  epoll.c  ser.c
Clang/aio/cli/: ReadMe.txt  cli.cpp
Clang/aio/sendfile/: ReadMe.txt  send.cpp  sendfile.cpp
Clang/atomic/ovs/: Makefile  main  main.c  ovs-atomic.h
Clang/atomic/performance/: Makefile  atomic64.h  main.c  test
Clang/common/: attribute  attribute.c  make  noreturn  noreturn.c
Clang/compile/: acinclude.m4  aclocal.m4  configure.ac  run
Clang/compile/m4/: test.m4
Clang/dlib/: Makefile  main  main.c  tick.c
Clang/dlib/share_lib/: dllibexample.c  dllibexample.h  main  main.c  shlibexample.c  shlibexample.h
Clang/fd_server/: fd_client.c  fd_server.c  fd_server.h  name_un_socket.h
Clang/list/lwan/: Makefile  main.c
Clang/map/lwan/: Makefile  main.c  reallocarray.c
Clang/map/ovs/: Makefile  hmap.c  hmap.h  main.c
Clang/media/h264_to_rtp/gitbackup/: config  index  packed-refs
Clang/media/h264_to_rtp/gitbackup/refs/heads/: master
Clang/media/video_njue/: Makefile_test_x264
Clang/media/video_njue/git.backup/: config  index  packed-refs
Clang/media/video_njue/git.backup/objects/pack/: pack-b6f44a946f033090c4890942f1952ad2897bdb0a.idx
Clang/media/video_njue/git.backup/refs/heads/: master
Clang/media/video_njue/include/: file_operate.c  sdf.h  video_capture.c  video_capture.h  yuyv2yuv420p.c
Clang/media/video_njue/src/: test_x264.c
Clang/network/: cps.c  read.c
Clang/string/lwan/: Makefile  main.c  strbuf.c
Clang/string/ovs/: Makefile  dynamic-string.c  dynamic-string.h  main.c
Clang/string/redis/: Makefile  main.c
Clang/thread/: Makefile  pthread_affinity.c  thread_specific.c
WX/: screengrab.py
asm/baby-steps-in-assembly/step1/: Makefile
asm/baby-steps-in-assembly/step2/: Makefile
asm/baby-steps-in-assembly/step3/: Makefile  asm.S
asm/learn_c_by_asm/: READM.md  static  static_var.c  test  test.c  test2  test2.c  test2.s
cpp/epoll/: MiniHeap.h  reactor.cpp  reactor.h  tcp_test.cpp  tcpeventhandler.cpp  tcpeventhandler.h  test.cpp  unixsocketeventhandler.cpp  unixsocketeventhandler.h  unixsocketeventhandler_test.cpp
cpp/thread/performance/: main.cc
http/: __init_.py  client.py  myexceptions.py  myhttp.py
java/NIO/client/: Makefile
java/NIO/client/src/: HelloClient.java  HelloClientHandler.java
java/NIO/server/: Makefile
java/NIO/server/src/: DiscardServer.java  DiscardServerHandler.java
java/PortScanner/: PortScanner.sh  README.md  build.xml
java/PortScanner/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
java/PortScanner/nbproject/private/: private.properties
java/PortScanner/src/gr/tsopokis/portscanner/: .PortScanner.java.swn  .PortScanner.java.swp  GUIScanner.form  GUIScanner.java  InvalidIPException.java  Main.java  (+3 more)
java/notebook/: java-singleton.md
java/test/: .project  README.md  build.xml  logback.xml
java/test/src/main/thrift/: ThriftService.thrift  ThriftStruct.thrift
lua/: GalaLua.md  GalaLua.md~  Vagrantfile  lua-c-api.lua  lua-c-api.lua~  lua-note.md  lua-note.md~  lua-programming.md  lua-programming.md~  lua_extend.md  lua_extend.md~  test.lua  tips.lua  tips.lua~  vagrant.md  vagrant.md~
lua/code/: bootstrap.lua  corutine.lua  emb.cpp  func.lua  lib1.lua  lua_cpp.cpp  test.lua  try_emb.lua  try_resume.lua
lua/code/lua-5.2.3/src/: lua  luac
lua/code/test/: Makefile  Makefile~  dump.cpp  helloworld.cpp  object.cpp  test.lua
lua/coding/example/: lua-c-api.c  lua-c-api.c~
nim/: BinaryTree.nim  basic_type.nim  block.nim  branch.nim  class_macros.nim  data_struct.nim  exception.nim  function.nim  getopt.nim  hello.nim  iterator.nim  macros_test.nim  multi.nim  oop.nim  operator.nim  primitives.nim  template.nim  variable.nim
python/: Manager.py  Manager_server.py  MergeImage.py  dict.py  fat_tree.py  fattree.py  improve_plural.py  ip_lib.py  multithreading.py  ssh_tool.py  tmux-script.py
python/http/: RestForJson.py
python/log/: log.py
shell/: abtest  affinity  affinity.sh  ant_init  args  basic  bond  color.sh  common_java7_options_java8_options  configure_yum_repo.sh  cpu_affinity  diagnosis  fd_read  flock  ftp.sh  gen_eth_cfg  getopt1.sh  gitbook  init_install  io-throughput  ip_record  java7_options  java8_options  java_init  java_options  kvm_install  log  namespace.sh  netperf_test  network-throughput  nginx_install  ntp  only_java7_options  only_java8_options  ovs_config  ovs_init  ovs_install  ovs_topo  ovsdb_dump  parell  (+8 more)
shell/compute/: kvm-clone.sh
shell/monitor/: network-throughput  start_monitor
shell/monitor/monitor_data/: cpu_monitor  io_monitor  mem_monitor  network_monitor
shell/monitor_script/: cpu-usage  mem-usage  monitor
shell/network/: eth_affinity  tcp_state
shell/pssh/: README  auto_login  config  copy_ssh_key  log  pexec  pexit  pinit  plog  pls  pwatch
shell/tcp/: README  createdb  dst_test  net_state  tcp_state  test  updatedb
systemtap/: watch_all_reads_writes.stp
(+94 files in other folders)
